Just Form is now to finish

--- a/PI-Pokemon-main/client/src/components/LandingPage/LandingPage.module.scss
+++ b/PI-Pokemon-main/client/src/components/LandingPage/LandingPage.module.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
+
 .container {
   background-color: black;
   background-image: url("https://fondosmil.com/fondo/14729.jpg");
@@ -52,6 +54,7 @@
   margin: 0.5em 0;
   padding: 0.8em 2.2em;
   cursor: pointer;
+  font-family: "Monoton", cursive;
 
   top: -8rem;
   left: -18.5rem;
