--- a/PI-Pokemon-main/client/src/components/NavBar/NavBar.module.scss
+++ b/PI-Pokemon-main/client/src/components/NavBar/NavBar.module.scss
@@ -1,8 +1,177 @@
-.navContainer {
+@import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
+
+.container {
+  margin-top: 10px;
+  display: flex;
+  background-color: #fff;
+  align-items: center;
+  gap: 10px;
+  border-radius: 20px;
+  box-shadow: 2px 2px 5px #999;
 }
-.navLabel {
+
+.navContainer2 {
+  display: flex;
+  gap: px;
+  align-items: center;
+  position: relative;
+  left: -200px;
+  transition: 0.5s;
+  border-radius: 50px;
+  overflow: hidden;
 }
+
+.navPic {
+  height: 50px;
+}
+
 .navSelect {
+  transform: translate(0%, 0%);
+  padding: 5px;
+  border: none;
+  font-size: 10px;
+  border-radius: 20px;
+  box-shadow: 0 2px 15px rgb(208, 27, 27);
+  appearance: button;
+  outline: none;
+  position: relative;
+  left: 1050px;
 }
+.inputNew {
+  width: 80px;
+  height: 40px;
+  cursor: pointer;
+  opacity: 0;
+  position: relative;
+  left: -70px;
+}
+.navContainer2 .inputNew:checked ~ .navOp {
+  width: 500px;
+}
+.navMenu {
+  position: relative;
+  left: 0px;
+  width: 30px;
+  top: 7px;
+  height: 4px;
+  border-radius: 50px;
+  background-color: rgb(210, 12, 12);
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.navMenu2 {
+  position: relative;
+  left: -30px;
+  top: -7px;
+  width: 30px;
+  height: 4px;
+  border-radius: 50px;
+  background-color: rgb(210, 12, 12);
+  pointer-events: none;
+  transition: 0.5s;
+}
+
 .navOp {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  width: 0;
+  gap: 20px;
+  overflow: hidden;
+  transition: 0.5s;
+  position: relative;
+  left: -100px;
+  font-family: "Monoton", cursive;
+}
+.navButtons {
+  box-shadow: 0 0.5px 5px rgb(208, 27, 27);
+  border-radius: 20px;
+}
+.navButtons:hover {
+  opacity: 0.5;
+  background-color: #000;
+  color: #fff;
+}
+
+.navBut {
+  position: absolute;
+  right: 10px;
+  border: 2px solid rgb(210, 12, 12);
+
+  height: 40px;
+  border-radius: 20px 5px 20px 0px;
+  cursor: pointer;
+  button:hover {
+    background-color: #000;
+    border-radius: 20px 5px 20px 0px;
+    color: #fff;
+    height: 40px;
+    padding: 0;
+  }
+  button {
+    padding-top: 11.5px;
+  }
+
+  &::after {
+    position: absolute;
+    top: 41%;
+    left: 50%;
+    transform: translate(-50%);
+
+    transition: all 0.3s linear;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    height: 15px;
+    width: 15px;
+    background: #ffbdbd;
+    box-shadow: 0px 0px 10px 3px rgb(255, 0, 0);
+    margin-left: -8px;
+    margin-top: -8px;
+    opacity: 0;
+    transition: all 0.1s linear;
+    border-radius: 100%;
+  }
+
+  @keyframes star {
+    0% {
+      margin-left: -10px;
+      margin-top: -10px;
+    }
+    25% {
+      margin-left: 110px;
+      margin-top: -10px;
+    }
+
+    50% {
+      margin-left: 110px;
+      margin-top: 20px;
+    }
+    75% {
+      margin-left: -10px;
+      margin-top: 20px;
+    }
+    100% {
+      margin-left: -10px;
+      margin-top: -10px;
+    }
+  }
+
+  &:hover {
+    opacity: 0.5;
+    &::before {
+      animation: star 1.3s linear infinite;
+      opacity: 0.5;
+    }
+
+    &::after {
+      content: "";
+      text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 20px #dc8282,
+        0 0 30px #dc8282, 0 0 40px #dc8282, 0 0 50px #dc8282, 0 0 60px #dc8282;
+    }
+  }
 }
