--- a/PI-Pokemon-main/client/src/index.css
+++ b/PI-Pokemon-main/client/src/index.css
@@ -1,13 +1,10 @@
+/* @import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap"); */
 body {
+  /* font-family: "Monoton", cursive; */
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  color: #000000;
+  text-decoration: none;
 }
