Errores en el Back de la Búsqueda Solucionado

--- a/PI-Pokemon-main/client/src/components/Pagination/Pagination.module.scss
+++ b/PI-Pokemon-main/client/src/components/Pagination/Pagination.module.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap");
 .footBar {
   display: flex;
   justify-content: center;
@@ -7,7 +7,7 @@
 }
 .footBtn {
   font-size: 20px;
-  font-family: "Monoton", cursive;
+  font-family: "Zen Dots", cursive;
   border: 2px solid rgb(78, 5, 5);
   border-radius: 70px;
   text-align: center;
