--- a/PI-Pokemon-main/client/src/App.css
+++ b/PI-Pokemon-main/client/src/App.css
@@ -1,13 +1,13 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap");
 button {
   background: transparent;
   border: 0;
-  /* font-family: "Monoton", cursive; */
+  font-family: "Zen Dots", cursive;
   font-size: 0.6rem;
 }
 select {
   background: transparent;
   border: 0;
-  /* font-family: "Monoton", cursive; */
+  font-family: "Zen Dots", cursive;
   font-size: 0.6rem;
 }
