--- a/PI-Pokemon-main/client/src/components/CreationPage/CreationPage.module.scss
+++ b/PI-Pokemon-main/client/src/components/CreationPage/CreationPage.module.scss
@@ -1,5 +1,172 @@
 .types {
+}
+.image {
+  height: 50px;
+  margin-top: 4px;
+}
+
+.imageCont {
+  margin-top: 10px;
+  border-radius: 20px;
+  margin-left: 5px;
+  margin-right: 5px;
+  display: flex;
+  box-shadow: 2px 2px 5px #999;
+}
+.image2 {
+  margin-top: 4px;
+  height: 50px;
+  position: relative;
+  left: 1335px;
+}
+
+.tittle {
+  position: relative;
+}
+
+.form {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 500px;
+  box-shadow: 5px 5px 20px 10px rgb(211, 2, 2);
+  position: relative;
+  left: 900px;
+  transform: translate(15%, -10%);
+  background: rgba(68, 2, 2, 0.5);
+  box-sizing: border-box;
+
+  border-radius: 40px;
+}
+
+.form .space {
+  position: relative;
+}
+
+.form .space .input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+
+.form .space .labels {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.form .space .input:focus ~ .labels {
+  top: -20px;
+  left: 0;
+  color: #060606;
+  font-size: 12px;
+}
+.select {
+  font-size: 18px;
+  color: #fff;
+  option {
+    color: #060606;
+  }
+}
+
+.label {
+  font-size: 20px;
+  color: #fff;
+}
+
+.button {
+  position: relative;
+  right: 10px;
+  border: 2px solid rgb(210, 12, 12);
+  height: 40px;
+  border-radius: 20px 5px 20px 0px;
+  font-size: 15px;
+  color: #fff;
+  cursor: pointer;
+
   button {
-    color: black;
+    padding-top: 11.5px;
+  }
+
+  &::after {
+    position: absolute;
+    top: 41%;
+    left: 50%;
+    transform: translate(-50%);
+
+    transition: all 0.3s linear;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    height: 15px;
+    width: 15px;
+    background: #ffbdbd;
+    box-shadow: 0px 0px 10px 3px rgb(255, 0, 0);
+    margin-left: -8px;
+    margin-top: -8px;
+    opacity: 0;
+    transition: all 0.1s linear;
+    border-radius: 100%;
+  }
+
+  @keyframes star {
+    0% {
+      margin-left: -10px;
+      margin-top: -10px;
+    }
+    25% {
+      margin-left: 100%;
+      margin-top: -10px;
+    }
+
+    50% {
+      margin-left: 100%;
+      margin-top: 20px;
+    }
+    75% {
+      margin-left: -10px;
+      margin-top: 20px;
+    }
+    100% {
+      margin-left: -10px;
+      margin-top: -10px;
+    }
+  }
+
+  &:hover {
+    opacity: 0.5;
+    &::before {
+      animation: star 1.3s linear infinite;
+      opacity: 0.5;
+    }
+
+    &::after {
+      content: "";
+      text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 20px #dc8282,
+        0 0 30px #dc8282, 0 0 40px #dc8282, 0 0 50px #dc8282, 0 0 60px #dc8282;
+    }
+  }
+}
+.image3 {
+  position: absolute;
+  top: 100px;
+  left: -10px;
+  img {
+    height: 730px;
   }
 }
