--- a/PI-Pokemon-main/client/src/index.css
+++ b/PI-Pokemon-main/client/src/index.css
@@ -1,6 +1,6 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap");
 body {
-  /* font-family: "Monoton", cursive; */
+  font-family: "Zen Dots", cursive;
   margin: 0;
 }
 
