--- a/PI-Pokemon-main/client/src/components/CharDetail/Detail.module.scss
+++ b/PI-Pokemon-main/client/src/components/CharDetail/Detail.module.scss
@@ -4,11 +4,14 @@
   align-items: center;
   margin-top: 100px;
   width: 700px;
+  height: 420px;
   box-shadow: 0px 0px 40px 20px #999;
   position: relative;
   left: 450px;
   border-radius: 50px;
+  background-image: url("http://skybots.net/drop-view/skybots_purple-background.png-viewInvertGBR");
 }
+
 .image {
   height: 300px;
   position: relative;
@@ -16,11 +19,30 @@
 }
 .card {
   display: flex;
-  justify-content: center;
-  align-self: center;
 }
 .pic {
   height: 50px;
+  &:hover {
+    opacity: 0.5;
+  }
+}
+.picCont {
+  margin-top: 10px;
+  background-color: #fff;
+  align-items: center;
+  gap: 10px;
+  border-radius: 20px;
+  box-shadow: 2px 2px 5px #999;
 }
 .details {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  left: -50px;
+  gap: 0%;
+}
+
+.content1 {
+  background-color: rgba(24, 170, 92, 0.618);
+  border-radius: 20px;
 }
