--- a/PI-Pokemon-main/client/src/components/Pagination/Pagination.module.scss
+++ b/PI-Pokemon-main/client/src/components/Pagination/Pagination.module.scss
@@ -9,10 +9,16 @@
   font-size: 20px;
   font-family: "Zen Dots", cursive;
   border: 2px solid rgb(78, 5, 5);
-  border-radius: 70px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
   text-align: center;
   &:hover {
     background-color: #000;
     color: #fff;
   }
+}
+.footBtn:focus {
+  background-color: #000;
+  color: #fff;
 }
