--- a/PI-Pokemon-main/client/src/components/HomePage/Home.module.scss
+++ b/PI-Pokemon-main/client/src/components/HomePage/Home.module.scss
@@ -5,10 +5,16 @@
 .cards {
   position: relative;
   top: 60px;
-  display: grid;
-  grid-template-columns: repeat(4, 0.2fr);
-  grid-gap: 10px;
-  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
+  gap: 10px;
+}
+.cards > * {
+  flex: 2 2 2 2 2;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .pagination {
