--- a/PI-Pokemon-main/client/src/components/LandingPage/LandingPage.module.scss
+++ b/PI-Pokemon-main/client/src/components/LandingPage/LandingPage.module.scss
@@ -74,7 +74,7 @@
   &:before,
   &:after {
     --z: 0px;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     display: block;
