--- a/PI-Pokemon-main/client/src/components/CreationPage/CreationPage.module.scss
+++ b/PI-Pokemon-main/client/src/components/CreationPage/CreationPage.module.scss
@@ -31,7 +31,7 @@
   margin-top: 4px;
   height: 50px;
   position: relative;
-  left: 1335px;
+  left: 86vw;
 }
 
 .tittle {
@@ -47,7 +47,7 @@
   width: 500px;
   box-shadow: 5px 5px 20px 10px rgb(211, 2, 2);
   position: relative;
-  left: 900px;
+  left: 60vw;
   transform: translate(15%, -10%);
   background: rgba(68, 2, 2, 0.5);
   box-sizing: border-box;
