--- a/PI-Pokemon-main/client/src/components/NavBar/NavBar.module.scss
+++ b/PI-Pokemon-main/client/src/components/NavBar/NavBar.module.scss
@@ -10,10 +10,7 @@
 
 .navContainer2 {
   display: flex;
-  gap: 0px;
   align-items: center;
-  position: relative;
-  left: -14%;
   transition: 0.5s;
   border-radius: 50px;
   overflow: hidden;
@@ -30,18 +27,15 @@
 }
 
 .navSelect {
-  transform: translate(0%, 0%);
   padding: 5px;
   border: none;
   font-size: 10px;
   border-radius: 20px;
   box-shadow: 0 2px 15px rgb(208, 27, 27);
-  appearance: button;
-  outline: none;
-  position: relative;
-  left: 70%;
-  --h: 1.2em;
+  position: absolute;
+  right: 12vw;
 }
+
 select {
   cursor: pointer;
 
@@ -55,8 +49,7 @@ select {
   height: 40px;
   cursor: pointer;
   opacity: 0;
-  position: relative;
-  left: -70px;
+  position: absolute;
 }
 
 .navContainer2 .inputNew:checked ~ .navOp {
@@ -95,8 +88,8 @@ select {
   gap: 20px;
   overflow: hidden;
   transition: 0.5s;
-  position: relative;
-  left: -100px;
+  position: static;
+  left: 10px;
 }
 
 .navButtons {
@@ -111,7 +104,7 @@ select {
 
 .navBut {
   position: absolute;
-  left: 89vw;
+  left: 90vw;
   border: 2px solid rgb(210, 12, 12);
 
   height: 40px;
